@@ -1,2 +1,2 @@
-wanpipe_linux: git ver 23ab060
-wanpipe_common: git ver c71136f
+wanpipe_linux: git ver f340d42
+wanpipe_common: git ver fb45280
