@@ -1,5 +1,5 @@
 Package: wanpipe
-Version: 7.0.6-0
+Version: 7.0.8-0
 Section: networking
 Priority: optional
 Architecture: all
