@@ -8,14 +8,15 @@ Copyright (c) 1995-2013 Sangoma Technologies Inc.
 For more info visit: http://wiki.sangoma.com
 ------------------------------------------------------------------------------
 
-* Wed Sep 25 2013 Nenad Corbic <ncorbic@sangoma.com> -  7.0.6
+* Wed Nov 14 2013 Nenad Corbic <ncorbic@sangoma.com> -  7.0.8
 ==================================================================
 
-- Updated wanpipemon to trace on multipel dchan in a single span
+- Updated wanpipemon to trace on multiple dchan in a single span
   eg: wanpipemon -i w1g1 -chan 1 -c trd
   If chan is not specificed then all dchans will be traced together.
 - Updated sample tapping application.
   Allow configuration for dchan and seven bit hdlc
+- Fixed GSM drivers for Windows
 
 * Mon Jul 15 2013 Nenad Corbic <ncorbic@sangoma.com> -  7.0.5
 ==================================================================
